--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   },
   "dependencies": {
     "@testing-library/user-event": "^14.4.3",
-    "eslint": "8.27.0",
-    "eslint-config-next": "13.0.3",
-    "next": "13.0.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "eslint": "^8.27.0",
+    "eslint-config-next": "^13.0.3",
+    "next": "^13.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "uuid": "^9.0.0",
     "web-vitals": "^3.0.4"
   }
 }
